<resources>
    <string name="app_name">Get Coins</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_menu">หน้าหลัก</string>
    <string name="map_menu">สถานี</string>
    <string name="oil_price_menu">ราคาน้ำมันวันนี้</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="oil_reason_vat">* ราคานี้ไม่รวมภาษีบำรุงท้องที่</string>
    <string name="oil_last_update">อัพเดทล่าสุด :%s</string>
    <string name="oil_price_per_litre">บาท/ลิตร</string>
    <string name="oil_price_today">วันนี้</string>
    <string name="app_version">เวอร์ชั่น :1.0.0</string>

    <string name="convert_to_btc">Currency to BTC</string>
    <string name="update_at">Update at : %s</string>
    <string name="convert_currency_button">Convert</string>
    <string name="btc_title">BTC</string>
    <string name="list_is_empty">List is Empty.</string>
    <string name="check_internet_connect">Please check internet.</string>
    <string name="hint_quantity">0</string>
</resources>